# libvirt-dbus

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitpublish  AUTHORS.in  AUTHORS.rst.in  CONTRIBUTING.rst  HACKING.md  HACKING.rst  Makefile.am  NEWS  NEWS.rst  README.md  README.rst  configure.ac  libvirt-dbus.spec.in  meson.build  meson_options.txt  run.in
.github/: lockdown.yml
.github/workflows/: lockdown.yml
ci/: gitlab.yml  manifest.yml
ci/buildenv/: almalinux-8.sh  alpine-320.sh  centos-stream-8.sh  centos-stream-9.sh  debian-10.sh  debian-sid.sh  fedora-35.sh  fedora-38.sh  fedora-40.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-leap-153.sh  opensuse-leap-154.sh  opensuse-tumbleweed.sh  ubuntu-2004.sh  ubuntu-2404.sh
ci/containers/: README.rst  almalinux-8.Dockerfile  alpine-320.Dockerfile  alpine-edge.Dockerfile  centos-8.Dockerfile  centos-stream-8.Dockerfile  centos-stream-9.Dockerfile  ci-centos-7.Dockerfile  ci-centos-8.Dockerfile  ci-centos-stream.Dockerfile  ci-debian-10.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-opensuse-151.Dockerfile  ci-ubuntu-1804.Dockerfile  ci-ubuntu-2004.Dockerfile  debian-10.Dockerfile  debian-11.Dockerfile  debian-12.Dockerfile  debian-sid.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-35.Dockerfile  fedora-36.Dockerfile  fedora-37.Dockerfile  fedora-38.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-41.Dockerfile  fedora-rawhide.Dockerfile  libvirt-centos-7.Dockerfile  libvirt-centos-8.Dockerfile  libvirt-centos-stream.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-9.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  (+15 more)
ci/gitlab/: build-templates.yml  builds.yml  container-templates.yml  containers.yml
ci/lcitool/projects/: libvirt-dbus.yml
data/: Makefile.am  libvirt-dbus.sysusers.conf  meson.build  org.libvirt.Connect.xml  org.libvirt.Domain.xml  org.libvirt.DomainSnapshot.xml  org.libvirt.Interface.xml
data/session/: libvirt-dbus.service.in  meson.build  org.libvirt.service.in
data/system/: libvirt-dbus.service.in  meson.build  org.libvirt-systemd.service.in  org.libvirt.service.in
docs/: libvirt-dbus.rst  meson.build
src/: Makefile.am  connect.c  connect.h  domain.c  domainsnapshot.c  domainsnapshot.h  events.c  interface.c  interface.h  meson.build  network.c  network.h  nodedev.c  nwfilter.c  secret.c  storagepool.c  storagevol.c  util.c  util.h
tests/: Makefile.am  libvirttest.py  meson.build  test_connect.py  test_domain.py  test_interface.py  test_network.py  test_nodedev.py  test_snapshot.py  test_storage.py  xmldata.py
tools/: dist.sh  fix-perm.sh  gen-authors.sh
