install_data(
    'org.libvirt.Connect.xml',
    'org.libvirt.Domain.xml',
    'org.libvirt.DomainSnapshot.xml',
    'org.libvirt.Interface.xml',
    'org.libvirt.Network.xml',
    'org.libvirt.NodeDevice.xml',
    'org.libvirt.NWFilter.xml',
    'org.libvirt.Secret.xml',
    'org.libvirt.StoragePool.xml',
    'org.libvirt.StorageVol.xml',
    install_dir: dbus_interfaces_dir,
)

subdir('session')
subdir('system')
